--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,8 +5,9 @@ import Footer from "./Footer.astro";
 import particlesOptions from "../config/particlesOptions";
 interface Props {
     title: string;
+    noTopPadding?: boolean;
 }
-const { title } = Astro.props;
+const { title, noTopPadding = false } = Astro.props;
 ---
 <!doctype html>
 <html lang="cs">
@@ -26,7 +27,7 @@ const { title } = Astro.props;
         </div>
         <div class="relative z-10 flex flex-col min-h-screen">
             <Header />
-            <main class="flex-grow container mx-auto px-4 py-8">
+            <main class={`flex-grow container mx-auto px-4 py-8 ${noTopPadding ? '' : 'mt-20'}`}>
                 <slot />
             </main>
             <Footer />
