--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ const aboutFeatures = [
     { icon: 'mdi:handshake', title: 'Partnerství', description: 'Věříme v dlouhodobou spolupráci a budování silných vztahů s našimi klienty. Jsme více než jen dodavatel - jsme váš partner na cestě k digitálnímu úspěchu.' },
 ];
 ---
-<Layout title="DigitalFusion - Vaše webové řešení">
+<Layout title="DigitalFusion - Vaše webové řešení" noTopPadding={true}>
     <div class="flex items-center justify-center min-h-screen">
         <Hero 
             title="DigitalFusion: Vaše webová transformace začíná zde"
