--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const { title, noTopPadding = false } = Astro.props;
         </div>
         <div class="relative z-10 flex flex-col min-h-screen">
             <Header />
-            <main class={`flex-grow container mx-auto px-4 py-8 ${noTopPadding ? '' : 'mt-20'}`}>
+            <main class={`flex-grow container mx-auto px-4 ${noTopPadding ? 'pt-0' : 'pt-20'}`}>
                 <slot />
             </main>
             <Footer />
